--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
-<html>
+
   <div class="container">
-    <app-search-box class="search"></app-search-box>    
-  </div>
-</html>
+    <div></div>
+      <app-search-box class="app-search-box"></app-search-box>    
+    <div></div>    
+  </div> 
