--- a/src/app/search-box/search-box.component.html
+++ b/src/app/search-box/search-box.component.html
@@ -1,32 +1,34 @@
-<div class="search-box">
-        <form class="search-form">
-            <mat-form-field class="search-input">
-                <input name="searchInput" matInput placeholder="Search for a song" [(ngModel)]="searchInput">    
-            </mat-form-field>  
+<div class="search-container">
+    <div class="search-box">
+            <form class="search-form">
+                <mat-form-field class="search-input">
+                    <input name="searchInput" matInput placeholder="Search for a song" [(ngModel)]="searchInput">    
+                </mat-form-field>  
+            </form>
             <button mat-stroked-button on-click="onSearch(searchInput)" class="search-button">Search</button>
-        </form>
-</div>
-<div class="search-results">
-    <mat-table [dataSource]="searchResults" class="search-table">
-        <!-- Song name column -->
-        <ng-container matColumnDef="name">
-            <mat-header-cell *matHeaderCellDef> Song name </mat-header-cell>
-            <mat-cell *matCellDef="let result"> {{result.trackName}} </mat-cell>
-        </ng-container>
-        
-        <!-- Artist column -->
-        <ng-container matColumnDef="artist">
-            <mat-header-cell *matHeaderCellDef> Artist </mat-header-cell>
-            <mat-cell *matCellDef="let result"> {{result.artistName}} </mat-cell>
-        </ng-container>
-        
-        <!-- Album column -->
-        <ng-container matColumnDef="album">
-            <mat-header-cell *matHeaderCellDef> Album </mat-header-cell>
-            <mat-cell *matCellDef="let result"> {{result.collectionName}} </mat-cell>
-        </ng-container>
-        
-        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-        <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-    </mat-table>
+    </div>
+    <div class="search-results">
+        <mat-table [dataSource]="searchResults" class="search-table">
+            <!-- Song name column -->
+            <ng-container matColumnDef="name">
+                <mat-header-cell *matHeaderCellDef> Song name </mat-header-cell>
+                <mat-cell *matCellDef="let result"> {{result.trackName}} </mat-cell>
+            </ng-container>
+            
+            <!-- Artist column -->
+            <ng-container matColumnDef="artist">
+                <mat-header-cell *matHeaderCellDef> Artist </mat-header-cell>
+                <mat-cell *matCellDef="let result"> {{result.artistName}} </mat-cell>
+            </ng-container>
+            
+            <!-- Album column -->
+            <ng-container matColumnDef="album">
+                <mat-header-cell *matHeaderCellDef> Album </mat-header-cell>
+                <mat-cell *matCellDef="let result"> {{result.collectionName}} </mat-cell>
+            </ng-container>
+            
+            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+            <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+        </mat-table>
+    </div>
 </div>
