Removing an input that was not removed after refactor

--- a/src/app/search-box/search-box.component.html
+++ b/src/app/search-box/search-box.component.html
@@ -5,7 +5,7 @@
                     <input name="searchInput" matInput placeholder="Search for a song" [(ngModel)]="searchInput">    
                 </mat-form-field>  
             </form>
-            <button mat-stroked-button on-click="onSearch(searchInput)" class="search-button">Search</button>
+            <button mat-stroked-button on-click="onSearch()" class="search-button">Search</button>
     </div>
     <div class="search-results">
         <mat-table [dataSource]="searchResults" class="search-table">
